finalized database structure and have started laying out endpoints and arguments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - "5432"
     networks:
       - backend
+    volumes:
+      - ./migrate.sql:/tmp/migrate.sql
 
 networks:
   backend:
