--- a/build
+++ b/build
@@ -1,4 +1,4 @@
-#!/usr/bin/bash
+#!/bin/bash
 
 # Purge everything for testings sake
 docker rm -f $(docker ps -a -q)
@@ -8,12 +8,14 @@ docker volume rm $(docker volume ls -q)
 docker-compose build
 docker-compose up -d
 
-sleep 3
-# Create the database and tables
-docker exec PG psql -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = 'delivery'" | grep -q 1 | \
-  docker exec PG psql -U postgres -a -c "CREATE DATABASE delivery WITH ENCODING 'UTF8'"
-docker exec PG psql postgres -h 127.0.0.1 -d delivery -f /tmp/migrate.sql -a
+sleep 5
+# Create the database
+docker exec PG psql postgres -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = 'delivery';" \
+  | grep -q 1 | docker exec PG psql postgres -U postgres -c "CREATE DATABASE delivery WITH ENCODING 'UTF8';"
+
+# Create tables
+docker exec TP python -c 'from database import init_db; init_db()'
 
 # Run down then up to bring container to forground once all commands are done running.
-docker-compose down
+docker-compose stop
 docker-compose up
