have the testing framework and gunicorn implimented

--- a/build
+++ b/build
@@ -14,7 +14,7 @@ docker exec PG psql postgres -U postgres -tc "SELECT 1 FROM pg_database WHERE da
   | grep -q 1 | docker exec PG psql postgres -U postgres -c "CREATE DATABASE delivery WITH ENCODING 'UTF8';"
 
 # Create tables
-docker exec TP python -c 'from database import init_db; init_db()'
+docker exec TP python -c 'from trackpack.database import init_db; init_db()'
 
 # Run down then up to bring container to forground once all commands are done running.
 docker-compose stop
