--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-flask
-flask_restful
-flask-marshmallow
-marshmallow-sqlalchemy
-sqlalchemy
-psycopg2-binary
-gunicorn
-pytest
-eventlet
+Flask==1.1.2
+flask-marshmallow==0.14.0
+Flask-RESTful==0.3.8
+marshmallow-sqlalchemy==0.24.2
+SQLAlchemy==1.4.7
+psycopg2-binary==2.8.6
+gunicorn==20.1.0
+pytest==6.2.3
+eventlet==0.30.2
+requests==2.25.1
