--- a/build
+++ b/build
@@ -8,7 +8,11 @@
 docker-compose build
 docker-compose up -d
 
-sleep 5
+# Wait for the container to come online before attempting to run psql commands
+until [ "`docker inspect -f {{.State.Running}} PG`"=="true" ]; do
+  sleep 0.1;
+done;
+
 # Create the database
 docker exec PG psql postgres -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = 'delivery';" \
   | grep -q 1 | docker exec PG psql postgres -U postgres -c "CREATE DATABASE delivery WITH ENCODING 'UTF8';"
